vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__scalar_types__tests__enumeration_type_declaration-3.snap
---
source: vhdl_syntax/src/parser/productions/scalar_types.rs
expression: "to_test_text(Parser::type_declaration, \"type chars_t is ('A', 'B');\")"
---
FullTypeDeclaration
  Keyword(Type)
  Identifier 'chars_t'
  Keyword(Is)
  EnumerationTypeDefinition
    LeftPar
    EnumerationList
      CharacterLiteral ''A''
      Comma
      CharacterLiteral ''B''
    RightPar
  SemiColon
