vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__scalar_types__tests__integer_type_declaration.snap
---
source: vhdl_syntax/src/parser/productions/scalar_types.rs
expression: "to_test_text(Parser::type_declaration, \"type positive_t is range 0 to C_MAX;\")"
---
FullTypeDeclaration
  Keyword(Type)
  Identifier 'positive_t'
  Keyword(Is)
  NumericTypeDefinition
    RangeConstraint
      Keyword(Range)
      BinaryExpression
        LiteralExpression
          AbstractLiteral '0'
        Keyword(To)
        NameExpression
          Name
            NameDesignatorPrefix
              Identifier 'C_MAX'
  SemiColon
