vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__scalar_types__tests__range-2.snap
---
source: vhdl_syntax/src/parser/productions/scalar_types.rs
expression: "to_test_text(Parser::range, \"0 to 0\")"
---
RangeExpression
  LiteralExpression
    AbstractLiteral '0'
  Keyword(To)
  LiteralExpression
    AbstractLiteral '0'
