vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__scalar_types__tests__range-3.snap
---
source: vhdl_syntax/src/parser/productions/scalar_types.rs
expression: "to_test_text(Parser::range, \"slv32_t'range\")"
---
AttributeRange
  Name
    Identifier 'slv32_t'
    AttributeName
      Tick
      Keyword(Range)
