vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__scalar_types__tests__range.snap
---
source: vhdl_syntax/src/parser/productions/scalar_types.rs
expression: "to_test_text(Parser::range, \"100 downto 10\")"
---
RangeExpression
  LiteralExpression
    AbstractLiteral '100'
  Keyword(Downto)
  LiteralExpression
    AbstractLiteral '10'
